--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachfloor/ui-kit",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "Teachfloor UI Kit is a react components library focused on usability, accessibility and developer experience based on Mantine library",
   "author": "Stefano Marra",
   "private": false,
@@ -26,7 +26,8 @@
     "url": "https://github.com/teachfloor/ui-kit/issues"
   },
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files",
+    "release": "npm run build && release-it",
+    "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files --no-copy-ignored",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -97,6 +98,7 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
+    "release-it": "^15.6.0",
     "webpack": "^5.75.0"
   }
 }
