--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@teachfloor/ui-kit",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "Teachfloor UI Kit is a react components library focused on usability, accessibility and developer experience based on Mantine library",
   "author": "Stefano Marra",
   "private": false,
@@ -100,5 +100,14 @@
     "prop-types": "^15.8.1",
     "release-it": "^15.6.0",
     "webpack": "^5.75.0"
+  },
+  "release-it": {
+    "github": {
+      "release": true,
+      "tokenRef": "GITHUB_TOKEN"
+    },
+    "npm": {
+      "publish": true
+    }
   }
 }
