--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
+    "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
