--- a/package.json
+++ b/package.json
@@ -81,7 +81,8 @@
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
