--- a/package.json
+++ b/package.json
@@ -80,9 +80,9 @@
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
+    "mantine-datatable": "^1.8.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-table": "^7.8.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
