--- a/package.json
+++ b/package.json
@@ -100,6 +100,10 @@
     "release-it": "^15.6.0",
     "webpack": "^5.75.0"
   },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
+  },
   "release-it": {
     "github": {
       "release": true,
