--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,25 @@
+# dependencies
+node_modules
 /node_modules
+
+# builds
+build
+.rpt2_cache
+storybook-static
+.cache
+.eslintcache
+
+# misc
+.DS_Store
 babel.config.json
 .env
 .env.example
 .storybook
 README.md
 execute
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+package-lock.json
