--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "emotion",
     "teachfloor"
   ],
+  "files": [
+    "dist"
+  ],
   "homepage": "https://github.com/teachfloor/ui-kit#readme",
   "repository": {
     "type": "git",
@@ -30,22 +33,6 @@
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --ignore '**/*.stories.jsx'",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "**/*.stories.*"
-        ],
-        "rules": {
-          "import/no-anonymous-default-export": "off"
-        }
-      }
-    ]
   },
   "browserslist": {
     "production": [
@@ -77,9 +64,7 @@
     "@tabler/icons-react": "^2.2.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.0.9",
-    "mantine-datatable": "^1.8.2",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "mantine-datatable": "^1.8.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -97,6 +82,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-plugin-named-exports-order": "^0.0.2",
     "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "release-it": "^15.6.0",
     "webpack": "^5.75.0"
   },
