--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "@tabler/icons-react": "^2.40.0",
     "dayjs": "^1.11.7",
     "embla-carousel-react": "^7.1.0",
-    "mantine-datatable": "^6.0.3"
+    "mantine-datatable": "^6.0.3",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
